# abraxos

./: .readthedocs.yaml  License.txt  README.md  Untitled.ipynb  Untitled1.ipynb  pyproject.toml
abraxos/: __init__.py  extract.py  load.py  transform.py  utils.py  validate.py
docs/: conf.py  index.rst  modules.rst  requirements.txt
docs/_autosummary/: abraxos.load.use_sql.rst  abraxos.transform.transform.rst  abraxos.utils.split.rst  abraxos.validate.validate.rst
docs/_build/doctrees/: abraxos.doctree  api.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/doctrees/_autosummary/: abraxos.extract.read_csv.doctree  abraxos.extract.read_csv_chunks.doctree  abraxos.load.to_sql.doctree  abraxos.load.use_sql.doctree  abraxos.transform.transform.doctree  abraxos.utils.clear.doctree  abraxos.utils.split.doctree  abraxos.validate.validate.doctree
docs/_build/doctrees/tutorials/: index.doctree  reading_csv.doctree  transforming_data.doctree  validating_data.doctree  writing_sql.doctree
docs/_build/html/: .buildinfo  abraxos.html  api.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_autosummary/: abraxos.extract.read_csv.html  abraxos.extract.read_csv_chunks.html  abraxos.load.to_sql.html  abraxos.load.use_sql.html  abraxos.transform.transform.html  abraxos.utils.clear.html  abraxos.utils.split.html  abraxos.validate.validate.html
docs/tutorials/: reading_csv.rst  transforming_data.rst  validating_data.rst
tests/: bad.csv  test_all.py  test_read.py
(+20 files in other folders)
