[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "abraxos"
version = "0.0.7"
description = "Upgrade you Pandas ETL process."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas"
]
license = {text = "MIT License"}
keywords = ["etl", "validation", "sql", "csv", "pandas"]

[tool.setuptools.packages]
find = {}

[project.urls]
Documentation = "https://abraxos.readthedocs.io"
Source = "https://github.com/eddiethedean/abraxos"
Tracker = "https://github.com/eddiethedean/abraxos/issues"
